--- a/package.json
+++ b/package.json
@@ -13,10 +13,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "lodash": "^4.17.20",
-<<<<<<< HEAD
-    "nodemon": "^2.0.5"
-=======
+    "nodemon": "^2.0.5",
     "request": "^2.88.2"
->>>>>>> 5577d52f8473418f49ff17be4cc95da1398d2ad4
   }
 }
