--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express": "^4.17.1",
     "express-ejs-layouts": "^2.5.0",
     "express-session": "^1.17.1",
+    "jquery": "^3.5.1",
     "lodash": "^4.17.20",
     "mongoose": "^5.10.11",
     "nodemon": "^2.0.6",
